--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - name: Hello world action step
       id: hello
-      uses: pyhf/pyhf-validation-github-action@master
+      uses: pyhf/pyhf-validation-github-action@feat/add-GitHub-Action
       with:
         who-to-greet: 'Mona the Octocat'
     # Use the output from the `hello` step
