--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
         run: echo "The time was ${{ steps.hello.outputs.time }}"
       - name: Install pyhf-validation
         run: |
-          python -m pip install "git+https://github.com/pyhf/pyhf-validation.git#egg=hfval[complete]"
+          python3 -m pip install "git+https://github.com/pyhf/pyhf-validation.git#egg=hfval[complete]"
       - name: Run tests
         run: |
           wget https://raw.githubusercontent.com/pyhf/pyhf-validation-root-base/master/tests/rf308_normintegration2d.py
           wget https://raw.githubusercontent.com/pyhf/pyhf-validation-root-base/master/tests/test_import_ROOT_numpy.py
-          python rf308_normintegration2d.py
-          python test_import_ROOT_numpy.py
+          python3 rf308_normintegration2d.py
+          python3 test_import_ROOT_numpy.py
