--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,12 @@ jobs:
         run: |
           mkdir code
           cd code
-          python3 -m pip install "git+https://github.com/pyhf/pyhf-validation.git#egg=hfval[complete]"
+          python -m pip install "git+https://github.com/pyhf/pyhf-validation.git#egg=hfval[complete]"
           cd ..
           rm -r code
       - name: Run tests
         run: |
           wget https://raw.githubusercontent.com/pyhf/pyhf-validation-root-base/master/tests/rf308_normintegration2d.py
           wget https://raw.githubusercontent.com/pyhf/pyhf-validation-root-base/master/tests/test_import_ROOT_numpy.py
-          python3 rf308_normintegration2d.py
-          python3 test_import_ROOT_numpy.py
+          python rf308_normintegration2d.py
+          python test_import_ROOT_numpy.py
