Ensure environment is expected

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         run: echo "The time was ${{ steps.hello.outputs.time }}"
       - name: Install pyhf-validation
         run: |
+          cat /etc/os-release
+          python --version
           mkdir code
           cd code
           python -m pip install "git+https://github.com/pyhf/pyhf-validation.git#egg=hfval[complete]"
@@ -30,6 +32,8 @@ jobs:
           rm -r code
       - name: Run tests
         run: |
+          cat /etc/os-release
+          python --version
           wget https://raw.githubusercontent.com/pyhf/pyhf-validation-root-base/master/tests/rf308_normintegration2d.py
           wget https://raw.githubusercontent.com/pyhf/pyhf-validation-root-base/master/tests/test_import_ROOT_numpy.py
           python rf308_normintegration2d.py
