--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
       - name: Install pyhf-validation
+        uses: ./ # Uses an action in the root directory
+        id: hello
         run: |
           cat /etc/os-release
           python --version
@@ -31,6 +33,8 @@ jobs:
           cd ..
           rm -r code
       - name: Run tests
+        uses: ./ # Uses an action in the root directory
+        id: hello
         run: |
           cat /etc/os-release
           python --version
